Fixed yaml inconsistence
