# service/api/api-handler.go
@@ -12,7 +12,7 @@ func (rt *_router) Handler() http.Handler {
 
 	// User routes
 	rt.router.PUT("/users/:id/name", rt.wrap(rt.setName, true))
-	rt.router.GET("/users/:id/search/:name", rt.wrap(rt.getUsers, true))
+	rt.router.GET("/users/:id/search/:searchquery", rt.wrap(rt.getUsers, true))
 	rt.router.POST("/users/:id/conversations", rt.wrap(rt.newChat, true))
 	rt.router.GET("/users/:id/conversations", rt.wrap(rt.getMyConversations, true))
 	rt.router.GET("/users/:id/conversations/:chat_id", rt.wrap(rt.getConversation, true))
